--- a/.README.md.html
+++ b/.README.md.html
@@ -661,24 +661,27 @@ function setDocumentScrollTop(ypos)
  <li>Spring data ready</li> 
  <li>Bootstrap3 theme</li> 
 </ul> 
-<p align="center"> <a href="src/main/resources/images/colors-logback.png?raw=true" target="_blank"><img align="center" src="src/main/resources/images/colors-logback.png?raw=true" alt="colours logback" height="342" width="442" style="max-width:100%;" /></a> <a href="src/main/resources/images/plotly-charts.png?raw=true" target="_blank"><img align="center" src="src/main/resources/images/plotly-charts.png?raw=true" alt="charts" height="342" width="442/&gt;
-	&lt;img align=" style="max-width:100%;" /></a><a href="https://www.tutorialspoint.com/java/" rel="nofollow">https://www.tutorialspoint.com/java/</a></p> 
-<p>Official Oracle Java Tutorials site: <a href="https://docs.oracle.com/javase/tutorial/" rel="nofollow">https://docs.oracle.com/javase/tutorial/</a></p> 
-<p>Getting started: <a href="https://docs.oracle.com/javase/tutorial/getStarted/index.html" rel="nofollow">https://docs.oracle.com/javase/tutorial/getStarted/index.html</a></p> 
-<p>Learning the Java Language: <a href="https://docs.oracle.com/javase/tutorial/java/index.html" rel="nofollow">https://docs.oracle.com/javase/tutorial/java/index.html</a></p> 
-<p>Essential Java Classes: <a href="https://docs.oracle.com/javase/tutorial/essential/index.html" rel="nofollow">https://docs.oracle.com/javase/tutorial/essential/index.html</a></p> 
-<p>Java Collections: <a href="https://docs.oracle.com/javase/tutorial/collections/index.html" rel="nofollow">https://docs.oracle.com/javase/tutorial/collections/index.html</a></p> 
-<p>JavaFX Documentation Project: <a href="https://fxdocs.github.io/docs/index.html" rel="nofollow">https://fxdocs.github.io/docs/index.html</a></p> 
-<p><a href="http://code.makery.ch/library/javafx-8-tutorial/" rel="nofollow">http://code.makery.ch/library/javafx-8-tutorial/</a></p> 
-<p><a href="http://www.tutorialspoint.com/javafx/" rel="nofollow">http://www.tutorialspoint.com/javafx/</a></p> 
-<p><a href="http://docs.oracle.com/javase/8/javase-clienttechnologies.htm" rel="nofollow">http://docs.oracle.com/javase/8/javase-clienttechnologies.htm</a></p> 
-<p><a href="http://www.javafxtutorials.com/" rel="nofollow">http://www.javafxtutorials.com/</a></p> 
-<p><a href="http://www.java2s.com/Code/Java/JavaFX/CatalogJavaFX.htm" rel="nofollow">http://www.java2s.com/Code/Java/JavaFX/CatalogJavaFX.htm</a></p> 
-<p><a href="https://o7planning.org/en/11009/javafx" rel="nofollow">https://o7planning.org/en/11009/javafx</a></p> 
-<p><a href="https://docs.oracle.com/javase/8/docs/api/" rel="nofollow">Java API Documentation</a></p> 
-<p><a href="https://docs.oracle.com/javase/8/javafx/api/toc.htm" rel="nofollow">JavaFX API Documentation</a></p> 
-<p><a href="https://docs.oracle.com/javase/8/javafx/api/javafx/scene/doc-files/cssref.html" rel="nofollow">JavaFX CSS Reference Guide</a> (<a href="https://docs.oracle.com/javase/8/javafx/api/javafx/scene/doc-files/cssref.html#typecolor" rel="nofollow">CSS colors</a> + <a href="https://html-color-codes.info/old/colorpicker.html" rel="nofollow">HTML color picker</a>)</p> 
-<p><a href="https://docs.oracle.com/javafx/2/css_tutorial/jfxpub-css_tutorial.htm" rel="nofollow">JavaFX CSS Tutorial</a></p> 
-<p><a href="https://fontawesome.com/cheatsheet" rel="nofollow">Font Awesome cheatsheet</a></p>
+<p align="center"> <a href="src/main/resources/images/colors-logback.png?raw=true" target="_blank"><img align="center" src="src/main/resources/images/colors-logback.png?raw=true" alt="colours logback" height="342" width="442" style="max-width:100%;" /></a> <a href="src/main/resources/images/plotly-charts.png?raw=true" target="_blank"><img align="center" src="src/main/resources/images/plotly-charts.png?raw=true" alt="charts" height="342" width="442" style="max-width:100%;" /></a> <a href="src/main/resources/images/programmatic-form.png?raw=true" target="_blank"><img align="center" src="src/main/resources/images/programmatic-form.png?raw=true" alt="frm" height="342" width="442" style="max-width:100%;" /></a> </p> 
+<h2> <a id="javafx-to-read" class="anchor" href="#javafx-to-read" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>JavaFX To Read</h2> 
+<ul> 
+ <li> <p>Nice and clear Java tutorial: <a href="https://www.tutorialspoint.com/java/" rel="nofollow">https://www.tutorialspoint.com/java/</a></p> </li> 
+ <li> <p>Official Oracle Java Tutorials site: <a href="https://docs.oracle.com/javase/tutorial/" rel="nofollow">https://docs.oracle.com/javase/tutorial/</a></p> </li> 
+ <li> <p>Getting started: <a href="https://docs.oracle.com/javase/tutorial/getStarted/index.html" rel="nofollow">https://docs.oracle.com/javase/tutorial/getStarted/index.html</a></p> </li> 
+ <li> <p>Learning the Java Language: <a href="https://docs.oracle.com/javase/tutorial/java/index.html" rel="nofollow">https://docs.oracle.com/javase/tutorial/java/index.html</a></p> </li> 
+ <li> <p>Essential Java Classes: <a href="https://docs.oracle.com/javase/tutorial/essential/index.html" rel="nofollow">https://docs.oracle.com/javase/tutorial/essential/index.html</a></p> </li> 
+ <li> <p>Java Collections: <a href="https://docs.oracle.com/javase/tutorial/collections/index.html" rel="nofollow">https://docs.oracle.com/javase/tutorial/collections/index.html</a></p> </li> 
+ <li> <p>JavaFX Documentation Project: <a href="https://fxdocs.github.io/docs/index.html" rel="nofollow">https://fxdocs.github.io/docs/index.html</a></p> </li> 
+ <li> <p><a href="http://code.makery.ch/library/javafx-8-tutorial/" rel="nofollow">http://code.makery.ch/library/javafx-8-tutorial/</a></p> </li> 
+ <li> <p><a href="http://www.tutorialspoint.com/javafx/" rel="nofollow">http://www.tutorialspoint.com/javafx/</a></p> </li> 
+ <li> <p><a href="http://docs.oracle.com/javase/8/javase-clienttechnologies.htm" rel="nofollow">http://docs.oracle.com/javase/8/javase-clienttechnologies.htm</a></p> </li> 
+ <li> <p><a href="http://www.javafxtutorials.com/" rel="nofollow">http://www.javafxtutorials.com/</a></p> </li> 
+ <li> <p><a href="http://www.java2s.com/Code/Java/JavaFX/CatalogJavaFX.htm" rel="nofollow">http://www.java2s.com/Code/Java/JavaFX/CatalogJavaFX.htm</a></p> </li> 
+ <li> <p><a href="https://o7planning.org/en/11009/javafx" rel="nofollow">https://o7planning.org/en/11009/javafx</a></p> </li> 
+ <li> <p><a href="https://docs.oracle.com/javase/8/docs/api/" rel="nofollow">Java API Documentation</a></p> </li> 
+ <li> <p><a href="https://docs.oracle.com/javase/8/javafx/api/toc.htm" rel="nofollow">JavaFX API Documentation</a></p> </li> 
+ <li> <p><a href="https://docs.oracle.com/javase/8/javafx/api/javafx/scene/doc-files/cssref.html" rel="nofollow">JavaFX CSS Reference Guide</a> (<a href="https://docs.oracle.com/javase/8/javafx/api/javafx/scene/doc-files/cssref.html#typecolor" rel="nofollow">CSS colors</a> + <a href="https://html-color-codes.info/old/colorpicker.html" rel="nofollow">HTML color picker</a>)</p> </li> 
+ <li> <p><a href="https://docs.oracle.com/javafx/2/css_tutorial/jfxpub-css_tutorial.htm" rel="nofollow">JavaFX CSS Tutorial</a></p> </li> 
+ <li> <p><a href="https://fontawesome.com/cheatsheet" rel="nofollow">Font Awesome cheatsheet</a></p> </li> 
+</ul>
 </body>
 </html>
